# k-agit

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  wsgi.py
kagit/: __init__.py  admin.py  auth.py  config.py  models.py
kagit/data/: personas.py  sentences.py  titles.py
kagit/routes/: api_ai.py  api_phonetic.py  pages.py
kagit/services/: chatbot.py  g2p.py  phonetic_mapper.py  stt.py  tts.py  verifier.py
kagit/static/: hangul_data.js  i18n.js  jamo_descriptions.js  landing.css  manifest.json  robots.txt  script.js  sitemap.xml  style.css  sw.js
kagit/templates/: admin.html  index.html  landing.html  privacy.html  terms.html
migrations/: env.py
migrations/versions/: f7d207e6604f_baseline_schema_users_flask_dance_oauth_.py
scripts/: generate_jamo_audio.py  generate_jamo_descriptions.py
