[project]
name = "k-agit"
version = "0.2.0"
description = "K-AGIT — global Korean phonetic learning app for K-pop / K-drama fans"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "oauthlib>=3.3.1",
    "pillow>=11.0.0",
    "psycopg[binary]>=3.2.0",
    "google-genai>=1.0.0",
    "werkzeug>=3.0.0",
    "requests>=2.32.5",
    "alembic>=1.13.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["kagit*"]
